Fixed some bugs and still working on mobile version

--- a/practice/codecademy/capstone/index.css
+++ b/practice/codecademy/capstone/index.css
@@ -17,7 +17,11 @@ body {
     margin: 0 24px;
 }
 
-.mobile-device {
+.desktop-img {
+    display: block;
+}
+
+.mobile-device, .mobile-img {
     display: none;
 }
 
@@ -70,9 +74,12 @@ body {
     margin: 32px 24px;
 }
 
+.img-width {
+    width: 100%;
+}
+
 .second-block {
     width: 40%;
-    margin: 32px 140px 0 16px;
 }
 
 .title-first_wrap {
@@ -89,7 +96,7 @@ body {
 }
 
 .style-button {
-    width: 82%;
+    width: 90%;
     font-size: 1.5625rem;
     color: #ffffff;
     background-color: #4a4a4a;
@@ -103,13 +110,9 @@ body {
     background-color: #FFFFFF;
 }
 
-.first-block {
-    width: 60%;
-    border-right: 2px solid #e0e2e2;
-}
-
-.img-second_wrap {
-    margin: 32px 24px;
+.second-block_border {
+    width: 40%;
+    border-left: 2px solid #e0e2e2;
 }
 
 .title-second_wrap {
@@ -132,22 +135,16 @@ body {
     margin: 0 0 32px 24px;
 }
 
-.second-block_wrap {
-    width: 40%;
-}
-
-.block-wrap_main, .block-wrap_bg {
+.block-wrap_bg {
     display: flex;
-    padding: 32px 16px 16px 16px;
+    background-color: #d8d8d8;
+    padding: 32px 16px;
+    margin-bottom: 32px;
 }
 
 .block-wrap {
     display: flex;
-    padding: 16px;
-}
-
-.block-wrap_bg {
-    background-color: #d8d8d8;
+    margin: 32px 16px;
 }
 
 .text-wrap {
@@ -196,6 +193,7 @@ body {
     font-size: 48px;
     text-align: center;
     padding-top: 32px;
+    margin-top: 0;
     margin-bottom: 32px;
 }
 
@@ -298,7 +296,7 @@ body {
 }
 
 @media screen and (max-width: 970px ) {
-    .desktop-device {
+    .desktop-device, .img-first_wrap, .desktop-img {
         display: none;
     }
     .mobile-device {
@@ -334,7 +332,30 @@ body {
     .ic-login {
         background-image: url("images/ic-login.svg");
     }
-    .first-wrap {
+    .first-wrap, .second-wrap {
         flex-direction: column;
+    }
+    .img-first_wrap {
+        width: 100%;
+        height: auto;
+        margin: 0;
+    }
+    .second-block {
+        width: 100%;
+        margin: 0;
+    }
+    .title-first_wrap {
+        font-size: 3rem;
+        margin: 32px 16px;
+    }
+    .fs-paragraph {
+        font-size: 1.875rem;
+        margin: 0 16px 24px 16px;
+    }
+    .style-button {
+        margin: 0 16px 32px 16px;
+    }
+    .mobile-img {
+        display: block;
     }
 }
